@@ -57,14 +57,14 @@ public class MemberGoalCommandController {
       @AuthMember Long memberId,
       @PathVariable("member_goal_id") Long memberGoalId,
       @RequestBody MemberGoalRequestDto dto) {
-    return ResponseDto.ok(memberGoalService.updateGoal(memberId, memberGoalId, dto));
+    return ResponseDto.ok(memberGoalService.updateMemberGoal(memberId, memberGoalId, dto));
   }
 
   @PostMapping("/recommend")
   @Transactional(propagation = Propagation.REQUIRES_NEW)
   public ResponseDto<RecommendGoalResponseDto> creatRecommendGoal(@AuthMember Long memberId) {
     Member member = memberQueryService.findMember(memberId);
-    String job = member.getInterestJobs().get(0).getJob().getName();
+    String job = member.getInterestJobs().getFirst().getJob().getName();
 
     List<String> goal = memberGoalService.findMemberGoalNotCompleted(memberId);
 
